--- a/index.html
+++ b/index.html
@@ -309,9 +309,11 @@
         <!-- why choose us -->
 
         <section class="bg-white">
-            <p class="fm-titling fw-700 fs-48 lh-56 text-clr text-center mb-5">Why Choose Dry Ice Blasting for Your Car?
-            </p>
-            <div class="container_hero">
+            <div class="container_hero max-w-choose-sec">
+                <p class="fm-titling fw-700 fs-48 lh-56 text-clr text-center mb-5 main-heading-media">Why Choose Dry Ice
+                    Blasting for Your
+                    Car?
+                </p>
                 <div class="row">
                     <div class="col-lg-6 d-flex flex-column align-items-start justify-content-center">
                         <div class="d-flex align-items-center gap-media-choose-text">
@@ -365,11 +367,80 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        
+                    <div class="col-lg-6 mt-lg-0 mt-4">
+                        <div class="c-compare rounded-4" style="--value:50%;">
+                            <img class="c-compare__left rounded-4" src="./assets/Images/PNG/before-img.jpg"
+                                alt="Color" />
+                            <img class="c-compare__right rounded-4" src="./assets/Images/PNG/after-img.jpg" alt="B/W" />
+                            <input type="range" class="c-rng c-compare__range" min="0" max="100" value="50"
+                                oninput="this.parentNode.style.setProperty('--value', `${this.value}%`)" />
+                        </div>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- behind the scenes -->
+
+        <section class="d-flex flex-column bg-bts">
+
+            <!-- second cloud image -->
+
+            <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2">
+                <img src="./assets/Images/PNG/bts-cloud-top.png" alt="cloud-top-img" class="w-100 h-100">
+            </div>
+
+            <!-- middle section -->
+
+            <section class="h-bts-sec">
+                <div class="container_hero">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <p
+                            class="fm-titling fw-700 mb-0 fs-48 lh-56 text-white text-center main-heading-media max-w-bts-main-text">
+                            Behind the
+                            Scenes
+                            Dry Ice Blasting a Car</p>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-center my-media-video-bts">
+                        <p
+                            class="fm-acumin fw-400 fs-16 lh-24 text-white text-center main-heading-media max-w-bts-sub-text">
+                            From the initial setup to the final sweep, discover how we elevate car cleaning to an art
+                            form,
+                            delivering immaculate
+                            results every time.</p>
+                    </div>
+                    <div class="position-relative video_box overflow-hidden">
+                        <div class="position-absolute translate-middle start-50 top-50 z-1 video_play cursor">
+                            <img src="./assets/Images/SVG/play_btn-svg.svg" alt="play btn">
+                        </div>
+                        <div
+                            class="d-flex align-items-center justify-content-center overflow-hidden rounded-4 z-1 brdr-img-bts">
+                            <img src="./assets/Images/PNG/bts-video-img.png" alt="about-us-col-img"
+                                class="w-h-bts-img img_scale_hover">
+                        </div>
+                        <div class="position-absolute top-0 start-0 w-100 h-100 rounded-4 overflow-hidden change_z_ind">
+                            <iframe class="videos rounded-4" width="100%" height="100%"
+                                src="https://www.youtube-nocookie.com/embed/oON6Zyjk300?si=XbB7XbhZ0WphAXZ3&controls=0&autoplay=1"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen>…</iframe>
+                        </div>
+                    </div>
+                    <p class="fm-acumin fw-700 fs-16 lh-24 text-white text-center my-bottom-text-bts">Discover a
+                        cleaner, fresher, and more
+                        beautiful car, inside and out, with our advanced dry ice
+                        blasting services.</p>
+                    <div class="d-flex align-items-center justify-content-center mb-media-btn-bts"><button
+                            class="btns fm-acumin fw-700 fs-16 lh-19 text-white">Get Instant Quote</button></div>
+                </div>
+            </section>
+
+            <!-- cloud image -->
+
+            <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2">
+                <img src="./assets/Images/PNG/bts-cloud-bottom.png" alt="cloud-bottom-img" class="w-100 h-100">
+            </div>
+
         </section>
     </main>
 
