--- a/index.html
+++ b/index.html
@@ -253,23 +253,27 @@
         <!-- dry ice blasting -->
 
         <section class="bg-about-clr position-relative">
-            <p class="fm-titling fw-700 mb-4 fs-48 lh-56 text-white text-center main-heading-media">Understanding Dry
+            <p class="fm-titling fw-700 mb-0 fs-48 lh-56 text-white text-center main-heading-media">Understanding Dry
                 Ice Blasting</p>
             <div class="container_hero">
                 <div class="row">
-                    <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column py-blast-col">
-                        <p class="fm-acumin fw-700 fs-24 lh-36 text-white mb-0">What is Dry Ice Blasting?</p>
-                        <p class="fm-acumin fw-400 fs-18 lh-27 text-white opacity-90 mt-1 mb-0 max-w-blasting">Dry ice
-                            blasting is an
-                            innovative
-                            cleaning
-                            technology that uses solid CO2 (carbon dioxide)
-                            pellets. These pellets are
-                            propelled at high speeds to clean surfaces. Unlike traditional cleaning methods, this
-                            process does not involve water or
-                            abrasive materials, making it incredibly safe and effective for delicate areas like engine
-                            bays, undercarriages, and
-                            even car interiors.</p>
+                    <div class="col-lg-6 d-flex align-items-center justify-content-center flex-column py-blast-col">
+                        <div class="d-flex align-items-start justify-content-center flex-column  max-w-about-us-cont">
+                            <p class="fm-acumin fw-700 fs-24 lh-36 text-white mb-0">What is Dry Ice Blasting?</p>
+                            <p class="fm-acumin fw-400 fs-18 lh-27 text-white opacity-90 mt-1 mb-0 max-w-blasting">Dry
+                                ice
+                                blasting is an
+                                innovative
+                                cleaning
+                                technology that uses solid CO2 (carbon dioxide)
+                                pellets. These pellets are
+                                propelled at high speeds to clean surfaces. Unlike traditional cleaning methods, this
+                                process does not involve water or
+                                abrasive materials, making it incredibly safe and effective for delicate areas like
+                                engine
+                                bays, undercarriages, and
+                                even car interiors.</p>
+                        </div>
                     </div>
                     <div class="col-lg-6 d-max-lg-prop-blast">
                         <div class="pos-dry-ice-blast">
@@ -279,17 +283,21 @@
                     </div>
                 </div>
                 <div class="row flex-lg-row-reverse">
-                    <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column py-blast-col-2">
-                        <p class="fm-acumin fw-700 fs-24 lh-36 text-white mb-0">How Does Dry Ice Blasting Work?</p>
-                        <p class="fm-acumin fw-400 fs-18 lh-27 text-white opacity-90 mt-1 mb-0 max-w-blasting">The
-                            process begins with
-                            the dry ice pellets being accelerated in a jet of compressed air, similar to sandblasting
-                            but
-                            with a crucial difference. Upon contact with the surface, the dry ice pellets undergo
-                            sublimation - they turn directly
-                            from solid to gas without becoming liquid. This reaction creates a micro-explosion on the
-                            surface, lifting dirt and
-                            contaminants away.</p>
+                    <div class="col-lg-6 d-flex align-items-center justify-content-center flex-column py-blast-col-2">
+                        <div class="d-flex flex-column align-items-start justify-content-center  max-w-about-us-cont">
+                            <p class="fm-acumin fw-700 fs-24 lh-36 text-white mb-0">How Does Dry Ice Blasting Work?</p>
+                            <p class="fm-acumin fw-400 fs-18 lh-27 text-white opacity-90 mt-1 mb-0 max-w-blasting">The
+                                process begins with
+                                the dry ice pellets being accelerated in a jet of compressed air, similar to
+                                sandblasting
+                                but
+                                with a crucial difference. Upon contact with the surface, the dry ice pellets undergo
+                                sublimation - they turn directly
+                                from solid to gas without becoming liquid. This reaction creates a micro-explosion on
+                                the
+                                surface, lifting dirt and
+                                contaminants away.</p>
+                        </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="pos-dry-ice-blast-2">
@@ -368,13 +376,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 mt-lg-0 mt-4">
-                        <div class="c-compare rounded-4" style="--value:50%;">
-                            <img class="c-compare__left rounded-4" src="./assets/Images/PNG/before-img.jpg"
-                                alt="Color" />
-                            <img class="c-compare__right rounded-4" src="./assets/Images/PNG/after-img.jpg" alt="B/W" />
-                            <input type="range" class="c-rng c-compare__range" min="0" max="100" value="50"
-                                oninput="this.parentNode.style.setProperty('--value', `${this.value}%`)" />
-                        </div>
+                       
                     </div>
                 </div>
             </div>
@@ -384,7 +386,7 @@
 
         <section class="d-flex flex-column bg-bts">
 
-            <!-- second cloud image -->
+            <!-- top cloud image -->
 
             <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2">
                 <img src="./assets/Images/PNG/bts-cloud-top.png" alt="cloud-top-img" class="w-100 h-100">
@@ -402,8 +404,7 @@
                             Dry Ice Blasting a Car</p>
                     </div>
                     <div class="d-flex align-items-center justify-content-center my-media-video-bts">
-                        <p
-                            class="fm-acumin fw-400 fs-16 lh-24 text-white text-center main-heading-media max-w-bts-sub-text">
+                        <p class="fm-acumin fw-400 fs-16 lh-24 text-white text-center max-w-bts-sub-text">
                             From the initial setup to the final sweep, discover how we elevate car cleaning to an art
                             form,
                             delivering immaculate
@@ -420,7 +421,7 @@
                         </div>
                         <div class="position-absolute top-0 start-0 w-100 h-100 rounded-4 overflow-hidden change_z_ind">
                             <iframe class="videos rounded-4" width="100%" height="100%"
-                                src="https://www.youtube-nocookie.com/embed/oON6Zyjk300?si=XbB7XbhZ0WphAXZ3&controls=0&autoplay=1"
+                                src="https://www.youtube.com/embed/EM_FKck0DTo?si=oNdvYCJdXUfIL0t1"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 allowfullscreen>…</iframe>
@@ -435,13 +436,40 @@
                 </div>
             </section>
 
-            <!-- cloud image -->
+            <!-- bottom cloud image -->
 
             <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2">
                 <img src="./assets/Images/PNG/bts-cloud-bottom.png" alt="cloud-bottom-img" class="w-100 h-100">
             </div>
 
         </section>
+
+        <!-- latest work section -->
+
+        <!-- cloud image -->
+
+        <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud bg-about-clr">
+            <img src="./assets/Images/PNG/latest-work-top-cloud-img.png" alt="cloud-bottom-img" class="w-100 h-100">
+        </div>
+
+        <!-- main content -->
+
+        <section class="bg-about-clr">
+            <div class="container_hero">
+                <p
+                    class="fm-titling fw-700 mb-0 pb-media-latest-text fs-48 lh-56 text-white text-center main-heading-media">
+                    See Our Latest
+                    Work</p>
+            </div>
+        </section>
+
+        <!-- second cloud image -->
+
+        <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2 bg-about-clr">
+            <img src="./assets/Images/PNG/latest-work-bottom-cloud.png" alt="cloud-top-img" class="w-100 h-100">
+        </div>
+
+        <!-- till here -->
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
