--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Ice Blast Pro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"
+        integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
+        integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/CSS/root.css">
     <link rel="shortcut icon" href="./assets/Images/SVG/page_logo.svg" type="image/x-icon">
 </head>
@@ -376,7 +382,10 @@
                         </div>
                     </div>
                     <div class="col-lg-6 mt-lg-0 mt-4">
-                       
+                        <div class="d-flex align-items-center justify-content-center">
+                            <img src="./assets/Images/PNG/choose-us-col-img.png" alt="why choose us col image"
+                                class="w-100 h-100">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -444,6 +453,25 @@
 
         </section>
 
+        <!-- accordion section -->
+
+        <section class="my-number-sec">
+            <div class="container_hero">
+                <p class="fm-titling fw-700 mb-0 fs-48 lh-56 text-clr text-center main-heading-media">
+                    Let's Talk Numbers</p>
+                <div class="d-flex align-items-center justify-content-center mt-3">
+                    <p class="fm-acumin fw-400 fs-16 lh-24 text-clr opacity-70 mb-0 max-w-number-sec text-center">We're
+                        all
+                        about transparency, but we
+                        also know that each car tells a different story. The cost
+                        can vary based on how
+                        much grime we're up against. More dirt might mean more ice and more time to get that perfect
+                        finish. But don't sweat it
+                        – we'll always give you a straight price, customised to your car's needs.</p>
+                </div>
+            </div>
+        </section>
+
         <!-- latest work section -->
 
         <!-- cloud image -->
@@ -460,6 +488,34 @@
                     class="fm-titling fw-700 mb-0 pb-media-latest-text fs-48 lh-56 text-white text-center main-heading-media">
                     See Our Latest
                     Work</p>
+
+                <!-- <div class="slick-slider">
+                    <div class="slider-item">
+                        <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="slick slider image"
+                            class="w-100 h-100">
+                    </div>
+                    <div class="slider-item">
+                        <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="slick slider image"
+                            class="w-100 h-100">
+                    </div>
+                    <div class="slider-item">
+                        <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="slick slider image"
+                            class="w-100 h-100">
+                    </div>
+                    <div class="slider-item">
+                        <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="slick slider image"
+                            class="w-100 h-100">
+                    </div>
+                    <div class="slider-item">
+                        <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="slick slider image"
+                            class="w-100 h-100">
+                    </div>
+                </div> -->
+
+
+
+
+
             </div>
         </section>
 
@@ -472,9 +528,37 @@
         <!-- till here -->
     </main>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+        integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <!-- <script>
+        $(document).ready(function () {
+            $('.slick-slider').slick({
+                slidesToShow: 3,
+                centerMode: true,
+                centerPadding: '0',
+                focusOnSelect: true,
+                responsive: [
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            slidesToShow: 1,
+                            centerMode: false,
+                        }
+                    }
+                ]
+            });
+        });
+    </script> -->
 
     <script src="./assets/JS/app.js"></script>
 </body>
