--- a/index.html
+++ b/index.html
@@ -469,6 +469,202 @@
                         finish. But don't sweat it
                         – we'll always give you a straight price, customised to your car's needs.</p>
                 </div>
+                <div class="accord d-flex flex-column align-items-center justify-content-center w-100">
+                    <div
+                        class="accordion-items w-100 d-flex flex-lg-row flex-column align-items-baseline p-accordion justify-content-between">
+                        <div
+                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
+                                Engine Bay Perfection
+                                from
+                                £375
+                            </p>
+                            <span class="svg_icon_3 click-btn">
+                                <svg width="22" height="4" viewBox="0 0 22 4" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.0417 3.08333H12.3333H9.25H1.54167C1.13279 3.08333 0.740663 2.92091 0.451544 2.63179C0.162425 2.34267 0 1.95054 0 1.54167C0 1.13279 0.162425 0.740662 0.451544 0.451544C0.740663 0.162425 1.13279 0 1.54167 0H9.25H12.3333H20.0417C20.4505 0 20.8427 0.162425 21.1318 0.451544C21.4209 0.740662 21.5833 1.13279 21.5833 1.54167C21.5833 1.95054 21.4209 2.34267 21.1318 2.63179C20.8427 2.92091 20.4505 3.08333 20.0417 3.08333Z"
+                                        fill="#10192E" />
+                                </svg>
+                            </span>
+                            <span class="svg_icon">
+                                <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.0417 12.8333H12.3333V20.5417C12.3333 20.9505 12.1709 21.3427 11.8818 21.6318C11.5927 21.9209 11.2005 22.0833 10.7917 22.0833C10.3828 22.0833 9.99066 21.9209 9.70154 21.6318C9.41243 21.3427 9.25 20.9505 9.25 20.5417V12.8333H1.54167C1.13279 12.8333 0.740663 12.6709 0.451544 12.3818C0.162425 12.0927 0 11.7005 0 11.2917C0 10.8828 0.162425 10.4907 0.451544 10.2015C0.740663 9.91243 1.13279 9.75 1.54167 9.75H9.25V2.04167C9.25 1.63279 9.41243 1.24066 9.70154 0.951543C9.99066 0.662425 10.3828 0.5 10.7917 0.5C11.2005 0.5 11.5927 0.662425 11.8818 0.951543C12.1709 1.24066 12.3333 1.63279 12.3333 2.04167V9.75H20.0417C20.4505 9.75 20.8427 9.91243 21.1318 10.2015C21.4209 10.4907 21.5833 10.8828 21.5833 11.2917C21.5833 11.7005 21.4209 12.0927 21.1318 12.3818C20.8427 12.6709 20.4505 12.8333 20.0417 12.8333Z"
+                                        fill="black" />
+                                </svg>
+                            </span>
+                        </div>
+                        <p
+                            class="fm-acumin fw-400 fs-16 lh-24 text-clr opacity-70 max-w-sub-text-accord disp_text mb-0 mt-lg-0 mt-3">
+                            Crank up
+                            the cool factor under
+                            your hood with engine bay ice blasting. We delicately lift
+                            away oil, grease, and grime
+                            without water or chemicals. It's the ultimate detox for your engine, ensuring every
+                            hose, wire, and component is treated
+                            with the respect it deserves.</p>
+                        <span class="svg_icon_2 click-btn">
+                            <svg width="22" height="4" viewBox="0 0 22 4" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M20.0417 3.08333H12.3333H9.25H1.54167C1.13279 3.08333 0.740663 2.92091 0.451544 2.63179C0.162425 2.34267 0 1.95054 0 1.54167C0 1.13279 0.162425 0.740662 0.451544 0.451544C0.740663 0.162425 1.13279 0 1.54167 0H9.25H12.3333H20.0417C20.4505 0 20.8427 0.162425 21.1318 0.451544C21.4209 0.740662 21.5833 1.13279 21.5833 1.54167C21.5833 1.95054 21.4209 2.34267 21.1318 2.63179C20.8427 2.92091 20.4505 3.08333 20.0417 3.08333Z"
+                                    fill="#10192E" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <div
+                        class="accordion-items flex-lg-row flex-column accord-2 w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                        <div
+                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
+                                Underbelly Deep-Clean from
+                                £750
+                            </p>
+                            <span class="svg_icon_3 click-btn">
+                                <svg width="22" height="4" viewBox="0 0 22 4" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.0417 3.08333H12.3333H9.25H1.54167C1.13279 3.08333 0.740663 2.92091 0.451544 2.63179C0.162425 2.34267 0 1.95054 0 1.54167C0 1.13279 0.162425 0.740662 0.451544 0.451544C0.740663 0.162425 1.13279 0 1.54167 0H9.25H12.3333H20.0417C20.4505 0 20.8427 0.162425 21.1318 0.451544C21.4209 0.740662 21.5833 1.13279 21.5833 1.54167C21.5833 1.95054 21.4209 2.34267 21.1318 2.63179C20.8427 2.92091 20.4505 3.08333 20.0417 3.08333Z"
+                                        fill="#10192E" />
+                                </svg>
+                            </span>
+                            <span class="svg_icon">
+                                <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.0417 12.8333H12.3333V20.5417C12.3333 20.9505 12.1709 21.3427 11.8818 21.6318C11.5927 21.9209 11.2005 22.0833 10.7917 22.0833C10.3828 22.0833 9.99066 21.9209 9.70154 21.6318C9.41243 21.3427 9.25 20.9505 9.25 20.5417V12.8333H1.54167C1.13279 12.8333 0.740663 12.6709 0.451544 12.3818C0.162425 12.0927 0 11.7005 0 11.2917C0 10.8828 0.162425 10.4907 0.451544 10.2015C0.740663 9.91243 1.13279 9.75 1.54167 9.75H9.25V2.04167C9.25 1.63279 9.41243 1.24066 9.70154 0.951543C9.99066 0.662425 10.3828 0.5 10.7917 0.5C11.2005 0.5 11.5927 0.662425 11.8818 0.951543C12.1709 1.24066 12.3333 1.63279 12.3333 2.04167V9.75H20.0417C20.4505 9.75 20.8427 9.91243 21.1318 10.2015C21.4209 10.4907 21.5833 10.8828 21.5833 11.2917C21.5833 11.7005 21.4209 12.0927 21.1318 12.3818C20.8427 12.6709 20.4505 12.8333 20.0417 12.8333Z"
+                                        fill="black" />
+                                </svg>
+                            </span>
+                        </div>
+                        <p
+                            class="fm-acumin fw-400 fs-16 lh-24 text-clr opacity-70 max-w-sub-text-accord disp_text mb-0 mt-lg-0 mt-3">
+                            Crank up
+                            the cool factor under
+                            your hood with engine bay ice blasting. We delicately lift
+                            away oil, grease, and grime
+                            without water or chemicals. It's the ultimate detox for your engine, ensuring every
+                            hose, wire, and component is treated
+                            with the respect it deserves.</p>
+                        <span class="svg_icon_2">
+                            <svg width="22" height="4" viewBox="0 0 22 4" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M20.0417 3.08333H12.3333H9.25H1.54167C1.13279 3.08333 0.740663 2.92091 0.451544 2.63179C0.162425 2.34267 0 1.95054 0 1.54167C0 1.13279 0.162425 0.740662 0.451544 0.451544C0.740663 0.162425 1.13279 0 1.54167 0H9.25H12.3333H20.0417C20.4505 0 20.8427 0.162425 21.1318 0.451544C21.4209 0.740662 21.5833 1.13279 21.5833 1.54167C21.5833 1.95054 21.4209 2.34267 21.1318 2.63179C20.8427 2.92091 20.4505 3.08333 20.0417 3.08333Z"
+                                    fill="#10192E" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <div
+                        class="accordion-items flex-lg-row flex-column accord-3 w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                        <div
+                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
+                                Ultimate Undercarriage &
+                                Engine
+                                Bay
+                                Overhaul from £1,125
+                            </p>
+                            <span class="svg_icon_3 click-btn">
+                                <svg width="22" height="4" viewBox="0 0 22 4" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.0417 3.08333H12.3333H9.25H1.54167C1.13279 3.08333 0.740663 2.92091 0.451544 2.63179C0.162425 2.34267 0 1.95054 0 1.54167C0 1.13279 0.162425 0.740662 0.451544 0.451544C0.740663 0.162425 1.13279 0 1.54167 0H9.25H12.3333H20.0417C20.4505 0 20.8427 0.162425 21.1318 0.451544C21.4209 0.740662 21.5833 1.13279 21.5833 1.54167C21.5833 1.95054 21.4209 2.34267 21.1318 2.63179C20.8427 2.92091 20.4505 3.08333 20.0417 3.08333Z"
+                                        fill="#10192E" />
+                                </svg>
+                            </span>
+                            <span class="svg_icon">
+                                <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.0417 12.8333H12.3333V20.5417C12.3333 20.9505 12.1709 21.3427 11.8818 21.6318C11.5927 21.9209 11.2005 22.0833 10.7917 22.0833C10.3828 22.0833 9.99066 21.9209 9.70154 21.6318C9.41243 21.3427 9.25 20.9505 9.25 20.5417V12.8333H1.54167C1.13279 12.8333 0.740663 12.6709 0.451544 12.3818C0.162425 12.0927 0 11.7005 0 11.2917C0 10.8828 0.162425 10.4907 0.451544 10.2015C0.740663 9.91243 1.13279 9.75 1.54167 9.75H9.25V2.04167C9.25 1.63279 9.41243 1.24066 9.70154 0.951543C9.99066 0.662425 10.3828 0.5 10.7917 0.5C11.2005 0.5 11.5927 0.662425 11.8818 0.951543C12.1709 1.24066 12.3333 1.63279 12.3333 2.04167V9.75H20.0417C20.4505 9.75 20.8427 9.91243 21.1318 10.2015C21.4209 10.4907 21.5833 10.8828 21.5833 11.2917C21.5833 11.7005 21.4209 12.0927 21.1318 12.3818C20.8427 12.6709 20.4505 12.8333 20.0417 12.8333Z"
+                                        fill="black" />
+                                </svg>
+                            </span>
+                        </div>
+                        <p
+                            class="fm-acumin fw-400 fs-16 lh-24 text-clr opacity-70 max-w-sub-text-accord disp_text mb-0 mt-lg-0 mt-3">
+                            Crank up
+                            the cool factor under
+                            your hood with engine bay ice blasting. We delicately lift
+                            away oil, grease, and grime
+                            without water or chemicals. It's the ultimate detox for your engine, ensuring every
+                            hose, wire, and component is treated
+                            with the respect it deserves.</p>
+                        <span class="svg_icon_2">
+                            <svg width="22" height="4" viewBox="0 0 22 4" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M20.0417 3.08333H12.3333H9.25H1.54167C1.13279 3.08333 0.740663 2.92091 0.451544 2.63179C0.162425 2.34267 0 1.95054 0 1.54167C0 1.13279 0.162425 0.740662 0.451544 0.451544C0.740663 0.162425 1.13279 0 1.54167 0H9.25H12.3333H20.0417C20.4505 0 20.8427 0.162425 21.1318 0.451544C21.4209 0.740662 21.5833 1.13279 21.5833 1.54167C21.5833 1.95054 21.4209 2.34267 21.1318 2.63179C20.8427 2.92091 20.4505 3.08333 20.0417 3.08333Z"
+                                    fill="#10192E" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <div
+                        class="accordion-items flex-lg-row flex-column accord-4 w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                        <div
+                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
+                                Need Something Else?
+                            </p>
+                            <span class="svg_icon_3 click-btn">
+                                <svg width="22" height="4" viewBox="0 0 22 4" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.0417 3.08333H12.3333H9.25H1.54167C1.13279 3.08333 0.740663 2.92091 0.451544 2.63179C0.162425 2.34267 0 1.95054 0 1.54167C0 1.13279 0.162425 0.740662 0.451544 0.451544C0.740663 0.162425 1.13279 0 1.54167 0H9.25H12.3333H20.0417C20.4505 0 20.8427 0.162425 21.1318 0.451544C21.4209 0.740662 21.5833 1.13279 21.5833 1.54167C21.5833 1.95054 21.4209 2.34267 21.1318 2.63179C20.8427 2.92091 20.4505 3.08333 20.0417 3.08333Z"
+                                        fill="#10192E" />
+                                </svg>
+                            </span>
+                            <span class="svg_icon">
+                                <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20.0417 12.8333H12.3333V20.5417C12.3333 20.9505 12.1709 21.3427 11.8818 21.6318C11.5927 21.9209 11.2005 22.0833 10.7917 22.0833C10.3828 22.0833 9.99066 21.9209 9.70154 21.6318C9.41243 21.3427 9.25 20.9505 9.25 20.5417V12.8333H1.54167C1.13279 12.8333 0.740663 12.6709 0.451544 12.3818C0.162425 12.0927 0 11.7005 0 11.2917C0 10.8828 0.162425 10.4907 0.451544 10.2015C0.740663 9.91243 1.13279 9.75 1.54167 9.75H9.25V2.04167C9.25 1.63279 9.41243 1.24066 9.70154 0.951543C9.99066 0.662425 10.3828 0.5 10.7917 0.5C11.2005 0.5 11.5927 0.662425 11.8818 0.951543C12.1709 1.24066 12.3333 1.63279 12.3333 2.04167V9.75H20.0417C20.4505 9.75 20.8427 9.91243 21.1318 10.2015C21.4209 10.4907 21.5833 10.8828 21.5833 11.2917C21.5833 11.7005 21.4209 12.0927 21.1318 12.3818C20.8427 12.6709 20.4505 12.8333 20.0417 12.8333Z"
+                                        fill="black" />
+                                </svg>
+                            </span>
+                        </div>
+                        <p
+                            class="fm-acumin fw-400 fs-16 lh-24 text-clr opacity-70 max-w-sub-text-accord disp_text mb-0 mt-lg-0 mt-3">
+                            Crank up
+                            the cool factor under
+                            your hood with engine bay ice blasting. We delicately lift
+                            away oil, grease, and grime
+                            without water or chemicals. It's the ultimate detox for your engine, ensuring every
+                            hose, wire, and component is treated
+                            with the respect it deserves.</p>
+                        <span class="svg_icon_2">
+                            <svg width="22" height="4" viewBox="0 0 22 4" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M20.0417 3.08333H12.3333H9.25H1.54167C1.13279 3.08333 0.740663 2.92091 0.451544 2.63179C0.162425 2.34267 0 1.95054 0 1.54167C0 1.13279 0.162425 0.740662 0.451544 0.451544C0.740663 0.162425 1.13279 0 1.54167 0H9.25H12.3333H20.0417C20.4505 0 20.8427 0.162425 21.1318 0.451544C21.4209 0.740662 21.5833 1.13279 21.5833 1.54167C21.5833 1.95054 21.4209 2.34267 21.1318 2.63179C20.8427 2.92091 20.4505 3.08333 20.0417 3.08333Z"
+                                    fill="#10192E" />
+                            </svg>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="d-flex align-items-center flex-column justify-content-center sub-box-changes">
+                    <p class="fm-titling fw-700 fs-32 lh-45 text-clr text-center">Get an Instant Quote Today</p>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <p class="fm-acumin fw-400 fs-16 lh-24 text-center max-w-sub-box-text mb-0">Regular dry ice
+                            cleaning
+                            prevents costly
+                            rust and wear.
+                            Avoid potentially thousands of pounds
+                            worth of bodywork repairs
+                            when just for a fraction of that you can keep your car in prime condition all year round!
+                            What
+                            are you waiting for?</p>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-center mt-media-btn-bts"><button
+                            class="btns fm-acumin fw-700 fs-16 lh-19 text-white">Get Instant Quote</button></div>
+                </div>
             </div>
         </section>
 
