sub section in progress

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                         class="accordion-items w-100 d-flex flex-lg-row flex-column align-items-baseline p-accordion justify-content-between">
                         <div
                             class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
-                            <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
+                            <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head pr-media-acc-head-1 mb-0 fs-accordion-main-text">
                                 Engine Bay Perfection
                                 from
                                 £375
@@ -650,7 +650,7 @@
                 </div>
 
                 <div class="d-flex align-items-center flex-column justify-content-center sub-box-changes">
-                    <p class="fm-titling fw-700 fs-32 lh-45 text-clr text-center">Get an Instant Quote Today</p>
+                    <p class="fm-titling fw-700 fs-32 lh-45 text-clr text-center fs-sub-text-main">Get an Instant Quote Today</p>
                     <div class="d-flex align-items-center justify-content-center">
                         <p class="fm-acumin fw-400 fs-16 lh-24 text-center max-w-sub-box-text mb-0">Regular dry ice
                             cleaning
