added slick slider with swiper js

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <!-- preloaders -->
 
-    <!-- <section class="preloader d-grid">
+    <section class="preloader d-grid">
         <div class="d-flex align-items-center flex-column justify-content-center animation_elmnt">
             <div class="pre-img">
                 <img src="./assets/Images/SVG/page_logo.svg" alt="page logo" class="w-100 h-100">
             </div>
             <div class="loader"></div>
         </div>
-    </section> -->
+    </section>
 
     <!-- header -->
 
@@ -152,7 +152,7 @@
         <section class="back_layer_about py-about-us" id="about">
             <div class="container_hero max-w-about-us-cont">
                 <div class="row">
-                    <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column">
+                    <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column pe-lg-4">
 
                         <div class="d-flex align-items-start justify-content-center">
                             <p class="fm-titling fw-700 fs-48 lh-56 text-clr max-w-about-main-text">The Future of Car
@@ -694,6 +694,7 @@
                     class="fm-titling fw-700 mb-0 pb-media-latest-text fs-48 lh-56 text-white text-center main-heading-media">
                     See Our Latest
                     Work</p>
+
                 <div class="swiper gallery-slider">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide gallery-slide">
@@ -728,10 +729,9 @@
                         </div>
                     </div>
                     <div class="swiper-actions d-xl-none d-flex">
-                        <div class="swiper-btn swiper-button-prev"></div>
+                        <!-- <div class="swiper-btn swiper-button-prev"></div> -->
                         <div class="swiper-pagination d-xl-none d-flex"></div>
-                        <div class="swiper-btn swiper-button-next">
-                        </div>
+                        <!-- <div class="swiper-btn swiper-button-next"></div> -->
                     </div>
                 </div>
                 <div class="swiper-actions d-xl-flex d-none">
