made the slider responsive

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <!-- cloud image -->
 
         <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud bg-about-clr -mb-5px">
-            <img src="./assets/Images/PNG/cloud-bottom-img.png" alt="cloud-bottom-img" class="w-100 h-100">
+            <img src="./assets/Images/PNG/cloud-bottom-img.png" alt="cloud-bottom-img" class="w-100 h-100 -mt-1px">
         </div>
 
         <!-- dry ice blasting -->
@@ -404,7 +404,7 @@
             <!-- top cloud image -->
 
             <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2">
-                <img src="./assets/Images/PNG/bts-cloud-top.png" alt="cloud-top-img" class="w-100 h-change">
+                <img src="./assets/Images/PNG/bts-cloud-top.png" alt="cloud-top-img" class="w-100 h-change -mt-1px">
             </div>
 
             <!-- middle section -->
@@ -683,7 +683,8 @@
         <!-- cloud image -->
 
         <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud bg-about-clr -mb-5px">
-            <img src="./assets/Images/PNG/latest-work-top-cloud-img.png" alt="cloud-bottom-img" class="w-100 h-change">
+            <img src="./assets/Images/PNG/latest-work-top-cloud-img.png" alt="cloud-bottom-img"
+                class="w-100 h-change -mt-1px">
         </div>
 
         <!-- main content -->
@@ -763,7 +764,7 @@
         <!-- Team  section -->
 
         <section class="bg-white -mt-5px">
-            <div class="container_team position-relative pb-media-team">
+            <div class="container_hero position-relative pb-media-team max-w-team-cont">
                 <div class="row justify-content-between">
                     <div class="col-lg-5 pe-4">
                         <div class="position-absolute brdr-img-team-pos d-xxl-flex d-none"
