added pb in some section

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         <!-- About us -->
 
-        <section class="back_layer_about py-about-us" id="about">
+        <section class="back_layer_about py-about-us pb-media-about-sec" id="about">
             <div class="container_hero max-w-about-us-cont">
                 <div class="row">
                     <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column pe-lg-4">
@@ -461,7 +461,7 @@
 
         <!-- accordion section -->
 
-        <section class="my-number-sec" id="price">
+        <section class="my-number-sec pb-4" id="price">
             <div class="container_hero">
                 <p class="fm-titling fw-700 mb-0 fs-48 lh-56 text-clr text-center main-heading-media">
                     Let's Talk Numbers</p>
@@ -1253,11 +1253,12 @@
                 <p class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 text-center mt-2 mb-4">Get news, videos and
                     deals
                     straight to your inbox.</p>
-                <div class="d-flex align-items-center justify-content-between sub-input-box w-100">
+                <form class="d-flex align-items-center justify-content-between sub-input-box w-100">
                     <input type="text" placeholder="Enter your email address"
-                        class="fm-acumin fw-400 fs-16 lh-24 text-black opacity-70 input-sub-sec bg-transparent">
+                        class="fm-acumin fw-400 fs-16 lh-24 text-black opacity-70 input-sub-sec bg-transparent"
+                        required>
                     <button class="btns fm-acumin fw-700 fs-16 lh-19 text-white input-box-btn">Subscribe</button>
-                </div>
+                </form>
                 <div class="radio-btn mt-media-radio-btn d-flex align-items-center justify-content-center gap-2">
                     <div class="radio-box d-flex align-items-center justify-content-center cursor">
                         <img src="./assets/Images/SVG/tick-radio-image.svg" alt="tick image" class="radio-tick-img">
