added pb in the hero section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </nav>
 
         <section class="pt-hero" id="home">
-            <div class="container_hero d-flex align-items-center justify-content-center flex-column w-100 mb-5">
+            <div class="container_hero d-flex align-items-center justify-content-center flex-column w-100">
                 <div class="d-flex align-items-center justify-content-center">
                     <p
                         class="fm-titling fw-700 fs-96 text-white lh-115 max-w-hero-main-text text-center head-text-media mb-0">
