change the text in buttons

--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
                         Us Today</p>
                     <textarea class="w-100 rounded-3 text-area-box fm-acumin fw-400 fs-16 lh-24 p-3"
                         style="resize: none;" placeholder="Type Something..."></textarea>
-                    <button class="btns fm-acumin fw-700 fs-16 lh-19 text-white">Submit Here</button>
+                    <button class="btns fm-acumin fw-700 fs-16 lh-19 text-white">Submit Now</button>
                 </div>
             </div>
         </section>
@@ -1183,7 +1183,7 @@
                     Transformation? Get an Instant
                     Quote</p>
                 <div class="d-flex align-items-center justify-content-center mb-4"><button
-                        class="btns fm-acumin fw-700 fs-16 lh-19 text-white">Submit Here</button></div>
+                        class="btns fm-acumin fw-700 fs-16 lh-19 text-white">Get Instant Quote</button></div>
             </div>
         </section>
 
