make the accoridon svg in the center

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                                         fill="#10192E" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -525,7 +525,7 @@
                     </div>
 
                     <div
-                        class="accordion-items flex-lg-row flex-column accord-2 w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                        class="accordion-items flex-lg-row flex-column accord-2 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -540,7 +540,7 @@
                                         fill="#10192E" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -569,7 +569,7 @@
                     </div>
 
                     <div
-                        class="accordion-items flex-lg-row flex-column accord-3 w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                        class="accordion-items flex-lg-row flex-column accord-3 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -586,7 +586,7 @@
                                         fill="#10192E" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -615,7 +615,7 @@
                     </div>
 
                     <div
-                        class="accordion-items flex-lg-row flex-column accord-4 w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                        class="accordion-items flex-lg-row flex-column accord-4 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -629,7 +629,7 @@
                                         fill="#10192E" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
