added z-index to the button

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
             <p class="fm-acumin fw-700 fs-16 lh-24 text-clr text-center my-media-btm-text">Like What You See? Get an
                 Instant Quote</p>
-            <div class="d-flex align-items-center justify-content-center"><button
+            <div class="d-flex align-items-center justify-content-center position-relative z-3"><button
                     class="btns fm-acumin fw-700 fs-16 lh-19 text-white">Get Instant Quote</button></div>
         </section>
 
