added changes in accordion

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     <div
                         class="accordion-items w-100 d-flex flex-lg-row flex-column align-items-baseline p-accordion justify-content-between">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p
                                 class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head pr-media-acc-head-1 mb-0 fs-accordion-main-text">
                                 Engine Bay Perfection
@@ -527,7 +527,7 @@
                     <div
                         class="accordion-items flex-lg-row flex-column accord-2 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
                                 Underbelly Deep-Clean from
                                 £750
@@ -571,7 +571,7 @@
                     <div
                         class="accordion-items flex-lg-row flex-column accord-3 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
                                 Ultimate Undercarriage &
                                 Engine
@@ -617,7 +617,7 @@
                     <div
                         class="accordion-items flex-lg-row flex-column accord-4 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
                                 Need Something Else?
                             </p>
@@ -822,7 +822,7 @@
                     <div
                         class="accordion-items w-100 d-flex flex-column align-items-baseline p-accordion justify-content-between">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p
                                 class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head pr-media-acc-head-1 mb-0 fs-accordion-main-text">
                                 What types of vehicles are best suited for dry ice blasting?
@@ -856,7 +856,7 @@
                     <div
                         class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
                                 How often should I use dry ice blasting for optimal vehicle maintenance?
                             </p>
@@ -889,7 +889,7 @@
                     <div
                         class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
                                 Can dry ice blasting be used on vehicle interiors?
                             </p>
@@ -922,7 +922,7 @@
                     <div
                         class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
                                 What makes dry ice blasting more effective than pressure washing or sandblasting?
                             </p>
@@ -955,7 +955,7 @@
                     <div
                         class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Is
                                 there any preparation required on my part before a dry ice blasting session?
                             </p>
@@ -988,7 +988,7 @@
                     <div
                         class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">How
                                 long does a typical dry ice blasting session take?
                             </p>
@@ -1021,7 +1021,7 @@
                     <div
                         class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Can
                                 dry ice blasting improve my vehicle’s resale value?
                             </p>
@@ -1054,7 +1054,7 @@
                     <div
                         class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
                                 Will dry ice blasting remove existing wax or sealant from my car’s paint?
                             </p>
@@ -1087,7 +1087,7 @@
                     <div
                         class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
+                            class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Are
                                 there any special care instructions to follow after a dry ice blasting session?
                             </p>
@@ -1117,38 +1117,6 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
-                        <div
-                            class="d-flex align-items-baseline flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
-                            <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
-                                Have a Different Question? Contact Us Today
-                            </p>
-                            <span class="svg_icon_3 click-btn">
-                                <svg width="23" height="5" viewBox="0 0 23 5" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M9.3116 3.98521V3.98945H0.25V1.0166H9.5616H13.3953H22.752V3.98945L13.3955 3.98945L13.3953 3.98945L9.56186 3.98547L9.3116 3.98521Z"
-                                        fill="white" stroke="white" stroke-width="0.5" />
-                                </svg>
-                            </span>
-                            <span class="svg_icon d-flex align-items-center justify-content-center">
-                                <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M20.0417 12.8333H12.3333V20.5417C12.3333 20.9505 12.1709 21.3427 11.8818 21.6318C11.5927 21.9209 11.2005 22.0833 10.7917 22.0833C10.3828 22.0833 9.99066 21.9209 9.70154 21.6318C9.41243 21.3427 9.25 20.9505 9.25 20.5417V12.8333H1.54167C1.13279 12.8333 0.740663 12.6709 0.451544 12.3818C0.162425 12.0927 0 11.7005 0 11.2917C0 10.8828 0.162425 10.4907 0.451544 10.2015C0.740663 9.91243 1.13279 9.75 1.54167 9.75H9.25V2.04167C9.25 1.63279 9.41243 1.24066 9.70154 0.951543C9.99066 0.662425 10.3828 0.5 10.7917 0.5C11.2005 0.5 11.5927 0.662425 11.8818 0.951543C12.1709 1.24066 12.3333 1.63279 12.3333 2.04167V9.75H20.0417C20.4505 9.75 20.8427 9.91243 21.1318 10.2015C21.4209 10.4907 21.5833 10.8828 21.5833 11.2917C21.5833 11.7005 21.4209 12.0927 21.1318 12.3818C20.8427 12.6709 20.4505 12.8333 20.0417 12.8333Z"
-                                        fill="black" />
-                                </svg>
-                            </span>
-                        </div>
-                        <p
-                            class="fm-acumin fw-400 fs-16 lh-24 text-clr opacity-70 max-w-sub-text-accord disp_text mb-0 mt-lg-0 mt-3">
-                            Dry ice blasting is effective for cleaning a wide range of surfaces, including aircraft,
-                            automotive components, railway equipment, marine vessels, industrial machinery, food
-                            processing equipment, electrical components, and historic structures. The method is
-                            versatile, non-abrasive, and environmentally friendly, making it suitable for diverse
-                            applications across various industries.</p>
-                    </div>
                 </div>
                 <div class="question_box">
                     <p class="fm-acumin fw-700 fs-24 lh-32 text-clr fs-ques-box-text">Have a Different Question? Contact
