added href in the footer

--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-4 col-sm-6 d-flex align-items-center justify-content-center">
                         <div class="insight-box" data-aos="flip-left">
-                            <div>
+                            <div class="d-flex align-items-center justify-content-center">
                                 <img src="./assets/Images/PNG/insight-col-img-1.png" alt="random images" class="w-100">
                             </div>
                             <p class="fm-acumin fw-600 fs-16 lh-24 text-clr opacity-70 my-media-insight-box-text">
@@ -1186,7 +1186,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 mt-md-0 mt-3 d-flex align-items-center justify-content-center">
                         <div class="insight-box" data-aos="flip-right">
-                            <div>
+                            <div class="d-flex align-items-center justify-content-center">
                                 <img src="./assets/Images/PNG/insight-col-img-2.png" alt="random images" class="w-100">
                             </div>
                             <p class="fm-acumin fw-600 fs-16 lh-24 text-clr opacity-70 my-media-insight-box-text">
@@ -1197,7 +1197,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4 d-flex align-items-center justify-content-center">
                         <div class="insight-box" data-aos="flip-left">
-                            <div>
+                            <div class="d-flex align-items-center justify-content-center">
                                 <img src="./assets/Images/PNG/insight-col-img-3.png" alt="random images" class="w-100">
                             </div>
                             <p class="fm-acumin fw-600 fs-16 lh-24 text-clr opacity-70 my-media-insight-box-text">
@@ -1307,17 +1307,18 @@
                     <div class="row justify-content-between">
                         <div class="col-sm-3 col-6 d-flex align-items-start justify-content-start flex-column">
                             <p class="fm-acumin fw-700 fs-18 lh-27 text-white mb-3">Quick Link</p>
-                            <a href="#" class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 footer-link">Home</a>
-                            <a href="#"
+                            <a href="#home"
+                                class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 footer-link">Home</a>
+                            <a href="#about"
                                 class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 mt-footer-link footer-link">About
                                 Us</a>
-                            <a href="#"
+                            <a href="#service"
                                 class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 mt-footer-link footer-link">Services</a>
-                            <a href="#"
+                            <a href="#blog"
                                 class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 mt-footer-link footer-link">Blog</a>
                             <a href="#"
                                 class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 mt-footer-link footer-link">FAQ's</a>
-                            <a href="#"
+                            <a href="#contact"
                                 class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 mt-footer-link footer-link">Contact
                                 Us</a>
                         </div>
